; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/en_accel/extr_ktls_tx.c_tx_post_resync_params.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/en_accel/extr_ktls_tx.c_tx_post_resync_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5e_txqsq = type { i32 }
%struct.mlx5e_ktls_offload_context_tx = type { %struct.tls12_crypto_info_aes_gcm_128 }
%struct.tls12_crypto_info_aes_gcm_128 = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx5e_txqsq*, %struct.mlx5e_ktls_offload_context_tx*, i32)* @tx_post_resync_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tx_post_resync_params(%struct.mlx5e_txqsq* %0, %struct.mlx5e_ktls_offload_context_tx* %1, i32 %2) #0 {
  %4 = alloca %struct.mlx5e_txqsq*, align 8
  %5 = alloca %struct.mlx5e_ktls_offload_context_tx*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.tls12_crypto_info_aes_gcm_128*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store %struct.mlx5e_txqsq* %0, %struct.mlx5e_txqsq** %4, align 8
  store %struct.mlx5e_ktls_offload_context_tx* %1, %struct.mlx5e_ktls_offload_context_tx** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load %struct.mlx5e_ktls_offload_context_tx*, %struct.mlx5e_ktls_offload_context_tx** %5, align 8
  %13 = getelementptr inbounds %struct.mlx5e_ktls_offload_context_tx, %struct.mlx5e_ktls_offload_context_tx* %12, i32 0, i32 0
  store %struct.tls12_crypto_info_aes_gcm_128* %13, %struct.tls12_crypto_info_aes_gcm_128** %7, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @cpu_to_be64(i32 %14)
  store i32 %15, i32* %8, align 4
  %16 = load %struct.tls12_crypto_info_aes_gcm_128*, %struct.tls12_crypto_info_aes_gcm_128** %7, align 8
  %17 = getelementptr inbounds %struct.tls12_crypto_info_aes_gcm_128, %struct.tls12_crypto_info_aes_gcm_128* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  store i8* %18, i8** %11, align 8
  store i32 8, i32* %10, align 4
  %19 = load i8*, i8** %11, align 8
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @memcmp(i8* %19, i32* %8, i32 %20)
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %31, label %27

27:                                               ; preds = %3
  %28 = load i8*, i8** %11, align 8
  %29 = load i32, i32* %10, align 4
  %30 = call i32 @memcpy(i8* %28, i32* %8, i32 %29)
  br label %31

31:                                               ; preds = %27, %3
  %32 = load %struct.mlx5e_txqsq*, %struct.mlx5e_txqsq** %4, align 8
  %33 = load %struct.mlx5e_ktls_offload_context_tx*, %struct.mlx5e_ktls_offload_context_tx** %5, align 8
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @mlx5e_ktls_tx_post_param_wqes(%struct.mlx5e_txqsq* %32, %struct.mlx5e_ktls_offload_context_tx* %33, i32 %34, i32 1)
  ret void
}

declare dso_local i32 @cpu_to_be64(i32) #1

declare dso_local i32 @memcmp(i8*, i32*, i32) #1

declare dso_local i32 @memcpy(i8*, i32*, i32) #1

declare dso_local i32 @mlx5e_ktls_tx_post_param_wqes(%struct.mlx5e_txqsq*, %struct.mlx5e_ktls_offload_context_tx*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
